# HLFS

./: .gitignore  CMakeLists.txt  README.md  log.cc
bgtest/: Makefile  numa_dram_test.cc
bgtest/AEP/: CMakeLists.txt  Makefile  aep_study.cc  aep_study.h  aep_test.cc  dram_test.cc  helper.cc  intr.cc
bgtest/AEP/config/: aep_test_cfg.yml  aep_test_flags
bgtest/config/: ipmctl_cfg.txt
script/: aep_study.sh
tool_test/: glog规则.md  常用指令.md
tool_test/gflags/: CMakeLists.txt  gflags_basic.cc
tool_test/glibc/: Makefile  file_rw.cc  test_file  tick_test.cc  time_test.cc
tool_test/numa/: core_bind.cc  numa_basic.cc  numa_dram_test.cc
tool_test/yaml/: Makefile  yaml_test.cc  yaml_test_cfg.yml
util/: aep.h  aep_just.h  aep_test.cc  bitops.h  common.h  cpu.cc  cpu.h  instr.h  instr_just.h  log.h
